design4/css/style.css
@font-face {
  font-family: "Quentin";
  src: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/1630758530818e5735cd0986e1738625083566248f41a.otf");
}


html{
  overflow-x: hidden!important;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey; 
  border-radius: 5px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: red; 
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #b30000; 
}


body{
  margin: 0!important;
  padding: 0!important;
}
/* Utility Class */
.poppins {
  font-family: "Poppins", sans-serif;
}
.open-sans {
  font-family: "Open Sans", sans-serif;
}
.nunito-sans {
  font-family: "Nunito Sans", sans-serif;
}
.rubik {
  font-family: "Rubik", sans-serif;
}
body {
  overflow-x: hidden;
}
.userNameOuter{
  width: 100%;
  height: 100%;
  background: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/16307635750949308936d9f70b2acf12dba30c422bb68.png");
  background-position: center;
  /* background-clip: border-box; */
  background-size: cover;
  background-repeat: no-repeat;
}


@media (max-width: 400px) {
  .userNameOuter {
    background: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/16307643062975cf8384ed6e56371ca73b2f8f824f2eb.png");
    background-position: center;
    /* background-clip: border-box; */
    background-size: auto;
    background-repeat: no-repeat;
  }
}


.userName {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100vh;
  position: relative;
  background-color: rgba(0, 0, 0, 0.58);
}

.userName h1 {
  background-color: transparent;
  color: white;
  opacity: 1!important;
  font-size: 8rem;
  font-family: "Quentin";
  text-align: center;
}

.profession{
  word-spacing: 1.2px;
  letter-spacing: 7px;
  text-align: center;
  color: white;
  opacity: .75;
}

/* Button box */
.buttonBox button {
  border-radius: 2rem;
  font-family: "Rubik", sans-serif;
}

.topbg {
  height: 13rem;
  /* border-top: 1px solid navy; */
}

.middlebg {
  height: 37rem;
}

.bottombg {
  height: 6.5rem;
}

/* Images */
.images {
  max-height: 47rem;
  /* width: 70%; */
  top: 12%;
  /* margin: auto; */
  left: 7%;
  right: 7%;
  background-color: white;
}

.images img {
  transition: all 0.3s ease-in-out;
  cursor: pointer;
  opacity: 0.85;
}
.images img:hover {
  transform: scale(1.01);
  opacity: 1;
}
/* Contact */
.contact {
  max-height: 120vh;
  padding: 0rem 6rem 2rem 4rem;
}
.box {
  /* border: 1px solid white; */
  width: 15rem;
  margin: 0.5rem auto;
}
.box img {
  max-width: 100%;
}
.footer {
  position: absolute;
  /* bottom: 0; */
  left: 0;
  width: 100vw;
  font-size: 0.8rem;
  font-family: "Rubik", sans-serif;
}

/* Media Query */
@media (max-width: 1450px) {
  .middlebg {
    height: 34rem;
  }
}
@media (max-width: 1350px) {
  .middlebg {
    height: 30rem;
  }
}
@media (max-width: 1250px) {
  .middlebg {
    height: 26rem;
  }
}
@media (max-width: 1150px) {
  .middlebg {
    height: 22rem;
  }
}
@media (max-width: 1050px) {
  .middlebg {
    height: 18rem;
  }
  .topbg {
    height: 11rem;
  }
}
@media (max-width: 890px) {
  .middlebg {
    height: 15rem;
  }
  .images {
    top: 17%;
  }
}
@media (max-width: 680px) {
  .middlebg {
    height: 12rem;
  }
  .images {
    top: 17%;
    left: 4%;
    right: 4%;
  }
  .userName {
    background-position: center;
  }

  .userName h1{
    font-size: 3.5rem;
  }

  .profession{
    font-size: 1.2rem;
    letter-spacing: 9px;
  }
}
@media (max-width: 550px) {
  html {
    font-size: 13px;
  }
  .middlebg {
    height: 12rem;
  }
  .topbg {
    height: 7rem;
  }
  .images {
    top: 20%;
    left: 4%;
    right: 4%;
  }
  .contact {
    padding: 0rem 1rem 1rem 1rem;
  }
}
@media (max-width: 350px) {
  .middlebg {
    height: 8rem;
  }
}

